# a8-whisper

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  a8qingyu.spec  build.ps1  build_nuitka.ps1  debug_run.txt  pyproject.toml  run_output.txt  run_webview.ps1
.github/workflows/: build-release.yml
gui_web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
gui_web/src/: App.tsx  Overlay.tsx  index.css  main.tsx
gui_web/src/components/ui/: select.tsx
gui_web/src/lib/: bridge.ts
soc/: 设计文档.md
src/: api_server.py  main_webview.py  run_overlay.py  webview_bridge.py
src/core/: asr.py  audio.py  llm.py
src/ui/native_overlay/: manager.py  qt_overlay.py  types.py
